# CardDealerRobot

./: .env.example  .gitignore  README.md  card_dealer_core_node.py
Prototype/MQTT/: MongoDB_to_NETPIE.py  RoomCodeGenerator.py
Website-Deploy/backend/: .env-example  package.json
Website-Deploy/backend/src/: server.js
Website-Deploy/frontend/: index.html  script.js
Website/backend/: .env-example  package.json
Website/backend/src/: server.js
Website/frontend/: styles.css
prototype_src/card_dealer_msgs/: CMakeLists.txt
prototype_src/card_dealer_msgs/msg/: Player.msg
prototype_src/dealer_core/: package.xml  setup.cfg  setup.py
prototype_src/dealer_core/dealer_core/: MongoDB_to_NETPIE.py  RoomCodeGenerator.py  main.py
prototype_src/ir_reader/: package.xml  setup.py
prototype_src/ir_reader/ir_reader/: ir_reader.py
prototype_src/motor_controller/: package.xml
prototype_src/motor_controller/motor_controller/: motor_control.py  motor_run.py
prototype_src/mqtt_node/mqtt_node/: netpie_room_config_node.py
prototype_src/node_prototype/: package.xml  setup.cfg  setup.py
prototype_src/rotator/: package.xml
src/button_node/: package.xml  setup.cfg  setup.py
src/card_dealer_msgs/: CMakeLists.txt  package.xml
src/dealer_core/: package.xml  setup.py
src/ir_reader/: package.xml  setup.cfg  setup.py
src/launcher/: package.xml  setup.py
src/lcd_node/: package.xml  setup.cfg  setup.py
src/motor_controller/: setup.py
src/mqtt_node/: .gitignore  package.xml  setup.cfg  setup.py
src/rotator/: package.xml  setup.cfg  setup.py
(+29 files in other folders)
